# nexosign

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  components.json  package-lock.json  package.json  playwright.config.ts  vite.config.js
.cursor/rules/: core-architecture.mdc  rust-backend.mdc  svelte-typescript-frontend.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: actualizaciones-automaticas.md  certificados-pkcs11-y-windows.md  distribucion-macos.md  distribucion-windows.md
e2e/: README.md  api-contract.spec.ts  sign-route.spec.ts  smoke.spec.ts
scripts/: gen-load-test-pdfs.mjs  generate-updater-keys.mjs
scripts/load-test/: README.md
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/openapi/: nexosign-local-api.openapi.json  swagger-ui.html
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs  pcsc_wake.rs
src-tauri/src/adapters/http/: local_api_ops.rs  mod.rs  openapi.rs  pending_batch_intent.rs  state.rs
src-tauri/src/adapters/pdf/: cms_signer.rs  mod.rs  pades.rs  pades_attrs.rs  win_my_cms_signer.rs
src-tauri/src/adapters/persistence/: allowed_origins_db.rs  mod.rs  pkcs11_paths_db.rs  queue_store.rs
src-tauri/src/adapters/pkcs11/: driver.rs  error.rs  mod.rs  token.rs
src-tauri/src/adapters/windows_cert_store/: mod.rs
src-tauri/src/adapters/worker/: batch.rs
src-tauri/src/application/: errors.rs  mod.rs  sign_batch.rs
src-tauri/src/commands/: batch_queue_history.rs  local_api.rs  mod.rs  update.rs
src-tauri/src/domain/: allowed_origins.rs  cert_filter.rs  mod.rs  origin_policy.rs  pending_batch_intent.rs  signing_cert.rs
src-tauri/src/infrastructure/: batch_pdf_validation.rs  batch_runtime.rs  local_api_listen.rs  local_server.rs  mod.rs  origin_db.rs  origin_trust_prompt.rs  updater.rs  window.rs
src-tauri/src/ports/: batch_job_snapshot.rs  digest_signer.rs  mod.rs  pdf_pades_signer.rs  progress_notifier.rs
src-tauri/tests/: http_contract.rs
src-tauri/tests/fixtures/: auth_only.der  signing_digital_signature.der
src/lib/: nexosign-deep-link.test.ts  nexosign-deep-link.ts  signature-appearance-render.ts  signature-appearance.ts  utils.ts
src/lib/api/: local-api.test.ts  local-api.ts
src/lib/batch/: cancel-active-batch.ts
src/lib/components/: app-sidebar.svelte  batch-queue-panel.svelte  sign-compose-panel.svelte  sign-confirm-panel.svelte  sign-job-results.svelte  sign-pin-modal.svelte  sign-placement-modal.svelte  sign-wizard-panel.svelte  sign-wizard-stepper.svelte  signature-appearance-card.svelte  signing-cert-picker.svelte  theme-toggle.svelte
src/lib/config/: constants.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
(+50 files in other folders)
