[package]
name = "nexosign"
version = "0.1.0"
description = "NexoSign desktop (Tauri)"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexosign_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
axum = { version = "0.8", features = [] }
multer = "3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cryptoki = "0.12"
thiserror = "2.0.18"
x509-parser = "0.18.1"
lopdf = "0.40.0"
sha2 = "0.10"
der = "0.7"
hex = "0.4.3"
uuid = { version = "1.23.1", features = ["v4"] }
cms = { version = "0.2.3", features = ["builder", "std", "sha2", "rsa"] }
const-oid = "0.9.6"
rsa = "0.9.10"
signature = "2.2"
x509-cert = "0.2.5"
spki = "0.7.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tokio-util = "0.7.18"
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
chrono = { version = "0.4.44", features = ["clock"] }
base64 = "0.22"
bytes = "1"
flate2 = "1.1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

